# 4-captcha

./: .env.example  .gitignore  README.md  config.py  install.py  main.py  pyproject.toml  requirements.txt  schemas.py
attacks/: fgsm.py
data/: augment.py  combinations.py  dataset.py  fonts.py  labels.py  render_digits.py
eval/: metrics.py  plots.py
hub/: dataset_archive.py  dataset_card.md  dataset_git_upload.py  github_publish.py  hf_retry.py  model_card.md  model_card_builder.py  publish.py
models/: __init__.py  cnn.py  vit.py
outputs/confusion/: cnn_clean_adv_test.npz  cnn_clean_clean_test.npz  cnn_finetune_adv_test.npz  cnn_finetune_clean_test.npz  vit_clean_adv_test.npz  vit_clean_clean_test.npz  vit_finetune_adv_test.npz  vit_finetune_clean_test.npz
outputs/metrics/: cnn_clean.json  cnn_finetune.json  test_results.json  vit_clean.json  vit_finetune.json
outputs/predictions/: cnn_clean_adv_test.json  cnn_clean_clean_test.json  cnn_finetune_adv_test.json  cnn_finetune_clean_test.json  vit_clean_adv_test.json  vit_clean_clean_test.json  vit_finetune_adv_test.json  vit_finetune_clean_test.json
scripts/: _path.py  evaluate.py  finetune.py  generate_dataset.py  generate_fgsm.py  plot_results.py  publish.py  train_clean.py  upload_hf.py  upload_hf_dataset.py  upload_hf_models.py
train/: factory.py  loop.py  loss.py  scheduler.py
utils/: __init__.py  checkpoint.py
